<resources>
    <string name="app_name">CSN student</string>
    <string name="Overall">Overall</string>
    <string name="Lessons_schedule">Lessons schedule</string>
    <string name="Teachers_schedule">Teachers schedule</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Base_settings">User settings</string>
    <string name="group_prompt">Choose a group</string>
    <string name="timeUntil">The end of the %s pair</string>
    <string name="timeStart">Start of %s pair</string>
    <string name="sign_in">Sign in!</string>
    <string name="login">Login</string>
    <string name="enter_nickname">Enter nickname</string>
    <string name="password">Password</string>
    <string name="incorrect_password_or_nickname">Incorrect password or nickname</string>
    <string name="no_user">User not found</string>
    <string name="no_connection">No connection</string>
    <string name="nickname">Nickname</string>
    <string name="password_conf">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="nickname_is_taken">This nickname is taken by another user</string>
    <string name="successfully_registration">Successfully registration"</string>
    <string name="group">Group</string>
    <string name="home_screen">Home screen</string>
    <string name="timer">Timer</string>
    <string name="account_exit">Exit from account</string>
    <string name="denominator">The denominator</string>
    <string name="numerator">The numerator</string>
    <string name="pair">Pair</string>
    <string name="no_account_1">New student?\t</string>
    <string name="no_account_2">Create an account</string>
    <string name="account_1">Already have an account?\t</string>
    <string name="account_2">Sign in</string>
    <string name="Rating">Rating</string>
    <string name="datachanged">Successfully changed</string>
    <string name="nodata">Enter data!</string>
    <string name="not_set">Not set!</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="exit">Successfully log out</string>
    <string name="exitconfirm">Are you sure you want to log out?</string>
    <string name="mon">\t\t\t\tMON\t\t\t\t</string>
    <string name="tue">\t\t\t\tTUE\t\t\t\t</string>
    <string name="wed">\t\t\t\tWED\t\t\t\t</string>
    <string name="thu">\t\t\t\tTHU\t\t\t\t</string>
    <string name="fri">\t\t\t\tFRI\t\t\t\t</string>
    <string name="practice">Practice</string>
    <string name="assistant">Assistant</string>
    <string name="teachers_prompt">Choose a teacher</string>
    <string name="subjects">Subjects</string>
    <string name="settings">Settings</string>
    <string name="course">Course</string>
    <string name="labs">Labs</string>
    <string name="ihw">Ihw</string>
    <string name="other">Other</string>
    <string name="value">Value</string>
    <string name="lector">Lector</string>
    <string name="enter_name">Enter name</string>
    <string name="incorrect_data">Incorrect data</string>
    <string name="no_connection_server">No connection with our server, try later...</string>
    <string name="mark">Mark</string>
    <string name="full_statistic">Full statistic</string>
    <string name="subject">Subject</string>
    <string name="lab">Lab</string>
    <string name="settings_interface">Interface</string>
    <string name="language">Language</string>
    <string name="developers">Developers</string>
    <string name="GITHUB">GITHUB</string>
    <string name="Telegram">Telegram</string>
    <string name="schedule_bell">Schedule bell</string>
    <string name="start_lesson">Start</string>
    <string name="end_lesson">End</string>
    <string name="auditoriums_search">Auditoriums search</string>
    <string name="building_1">Building 1</string>
    <string name="building_3">Building 3</string>
    <string name="building_4">Building 4</string>
    <string name="building_5">Building 5</string>
    <string name="aud_search_hint">Enter 51 or акт.зал</string>
    <string name="floor">Floor</string>
    <string name="invalid_data">Invalid data (For all fields, use only letters and the underscore character)</string>
    <string name="passwords_do_not_match">Your password and confirmation password do not match</string>
    <string name="user_exist">User with this nickname already exists</string>
    <string name="no_auth">You are not authorized</string>
    <string name="no_auditorium">Such an audience does not exist</string>
    <string name="default_text">default text</string>
    <string name="download_dialog_title">Downloading files</string>
    <string name="teacher">Teacher</string>
    <string name="save_error">Failed to apply</string>
    <string name="reload_hint">Reload application</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="schedule_break">Break</string>
    <string name="calculator">Grade calculator</string>
    <string name="result_grade">Result grade</string>
    <string name="calculate">Calculate</string>
    <string name="mark100">100 point</string>
    <string name="mark5">5 point</string>
    <string name="markismore100">Error! One or more marks are above 100!</string>
    <string name="exam_failed">Exams failed!</string>
    <string name="no_grant">No grant</string>
    <string name="regular_grant">Regular grant</string>
    <string name="high_grant">High grant</string>
    <string name="calculator_hint_info">The calculation of the rating score for 100 and 5 point systems occurs in their respective systems.\n\nFormula: average score for examination subjects(100) x 0.9\n\nThe scholarship is awarded from the average score of the 4-point system from 4.0 and above, provided that there is no 3-marks. An increased scholarship is given from 5.0\n\nTable to convert points from 100 to 5:\n0-59 = 2\n60-74 = 3\n75-89 = 4\n90-100 = 5\n\nTable to convert points from 100 to letters:\n0-34 = F\n35-59 = FX (you have the right to repass exams)\n60-74 = E\n75-84 = C\n85-89 = B\n90-100 = A\n</string>
    <string name="hint_name">How is the calculation done?</string>
    <string name="failed_to_download">Failed to download</string>
    <string name="subjects_hint">"No subjects. Setup exams in </string>
    <string name="test">Test</string>
    <string name="exam">Exam</string>
    <string name="open_subject_hint">First enter the subjects tab!</string>
    <string name="achievements">Achievements</string>
    <string name="guest">Sign in as guest</string>
    <string name="you_must_be_registered">You must be registered </string>
</resources>

