<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/building_tl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        app:tabTextColor="@color/white">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_1" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_3" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_4" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_5" />
    </com.google.android.material.tabs.TabLayout>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3"
        android:gravity="center">

        <com.otaliastudios.zoom.ZoomImageView
            android:id="@+id/selectedBuilding"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background" />
    </RelativeLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/floor_tl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight="2"
        android:background="@color/background"
        app:tabTextColor="@color/white">

    </com.google.android.material.tabs.TabLayout>

</LinearLayout>