<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/design_v2_background"
    android:orientation="vertical"
    tools:context=".Activities.Registration">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />

    <ImageView
        android:layout_width="236dp"
        android:layout_height="18dp"
        android:layout_gravity="center"
        android:layout_weight="0.6"
        app:srcCompat="@drawable/icon" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />

    <EditText
        android:id="@+id/activity_registration_et_nickname"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColorHint="#FFFFFF"
        android:layout_weight="0.1"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/text_style"
        android:hint="@string/nickname" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <EditText
        android:id="@+id/activity_registration_et_password"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:textAlignment="center"
        android:background="@drawable/text_style"
        android:hint="@string/password"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <EditText
        android:id="@+id/activity_registration_et_passwordRe"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:textAlignment="center"
        android:background="@drawable/text_style"
        android:hint="@string/password_conf"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:textColor="#FFFFFF"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <Spinner
        android:id="@+id/activity_registration_sp_courses"
        android:layout_width="230dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_weight="0.2"
        android:background="@drawable/text_style"
        android:entries="@array/courses"
        android:prompt="@string/group_prompt"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <Spinner
        android:id="@+id/activity_registration_sp_groups"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.1"
        android:background="@drawable/text_style"
        android:entries="@array/downloading"
        android:prompt="@string/group_prompt"
        android:textAlignment="center" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2" />

    <Button
        android:id="@+id/activity_registration_bt_register"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.03"
        android:background="@drawable/design_v2_login_bt"
        android:onClick="OnClick"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05" />


        <TextView
            android:id="@+id/activity_registration_span1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/account_1"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/activity_registration_span2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:layout_gravity="top"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/account_2"
            tools:ignore="RtlCompat" />

</LinearLayout>


