<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:background="@drawable/activity_subject_list_head"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/result_grade"
            android:textColor="@color/white"
            android:textSize="@dimen/_18ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.99"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/gradecalculator_ll_no_subjects"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="20dp">

                <TextView
                    android:id="@+id/gradecalculator_tv_no_subjects_hint"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/subjects_hint"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/gradecalculator_tv_no_subjects_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/subjects"
                    android:textColor="@color/white" />

            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TableLayout
                    android:id="@+id/gradecalculator_sv_subjects"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:orientation="vertical"
                    android:visibility="gone">

                </TableLayout>

            </ScrollView>

            <TextView
                android:id="@+id/gradecalculator_tv_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hint_name"
                android:textColor="@color/white"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/gradecalculator_bt_calculate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="12dp"
            android:layout_weight="0.01"
            android:background="@drawable/activity_button2"
            android:elevation="10dp"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:background="@drawable/activity_subject_list_bottom"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp"
            android:weightSum="3">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mark100"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/mark5"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/gradecalculator_tv_result_100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp" />

                <TextView
                    android:id="@+id/gradecalculator_tv_result_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16ssp" />

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/gradecalculator_tv_grant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_grant"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />
    </LinearLayout>
</LinearLayout>