<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    android:orientation="vertical"
    tools:context=".Views.Fragments.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:weightSum="1"
        android:gravity="center">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.6"
            android:elevation="100dp"
            android:adjustViewBounds="true"
            app:srcCompat="@drawable/app_icon" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/activity_login_et_nickname"
            android:layout_width="0dp"
            android:layout_height="@dimen/auth_button_size"
            android:layout_weight="0.8"
            android:background="@drawable/activity_text_style"
            android:hint="@string/enter_nickname"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/activity_login_et_password"
            android:layout_width="0dp"
            android:layout_height="@dimen/auth_button_size"
            android:layout_weight="0.8"
            android:background="@drawable/activity_text_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/activity_login_bt_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/auth_button_size"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:background="@drawable/activity_button2"
            android:elevation="10dp"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/_14ssp" />

        <ProgressBar
            android:id="@+id/activity_login_pb_loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Button
            android:id="@+id/activity_login_bt_guest"
            android:layout_width="0dp"
            android:layout_height="@dimen/auth_button_size"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:background="@drawable/activity_button2"
            android:elevation="10dp"
            android:stateListAnimator="@null"
            android:text="@string/guest"
            android:textColor="#FFFFFFFF"
            android:textSize="@dimen/_14ssp" />

        <ProgressBar
            android:id="@+id/activity_login_pb_guest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0.05">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/no_account_1"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/activity_login_tv_span2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/no_account_2"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />

    </LinearLayout>

</LinearLayout>



