<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3D57AF"
    android:orientation="vertical"
    tools:context=".Activities.Login">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" />

    <ImageView
        android:layout_width="254dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_weight="0.08"
        app:srcCompat="@drawable/icon" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" />

    <TextView
        android:id="@+id/activity_login_tv_login_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="36sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.175" />

        <EditText
            android:id="@+id/activity_login_et_nickname"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.65"
            android:background="@drawable/text_style"
            android:hint="@string/enter_nickname"
            android:textAlignment="center"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.175" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

        <EditText
            android:id="@+id/activity_login_et_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:background="@drawable/text_style"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

        <Button
            android:id="@+id/activity_login_bt_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            android:background="@drawable/button_style"
            android:onClick="OnClick"
            android:text="@string/login"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.15" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/activity_login_tv_span1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.02"
            android:text="@string/no_account_1"
            android:textAlignment="textEnd"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />
        <TextView
            android:id="@+id/activity_login_tv_span2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.02"
            android:text="@string/no_account_2"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            tools:ignore="RtlCompat" />
    </LinearLayout>

</LinearLayout>



